# bdo-optimizer-launcher

./: .gitignore  Cargo.toml  LICENSE  README.md  app.dev.manifest  app.manifest  build.rs  package-lock.json  package.json  tauri.conf.json  vite.config.js
.design/: BDO Optimizer Glass.html
.design/glass/: app.jsx  icons.jsx  select.jsx  styles.css  tab-control.jsx  tab-monitor.jsx  tab-schedule.jsx  tab-settings.jsx
.github/workflows/: ci.yml  release.yml
capabilities/: default.json
docs/distribution/: manual.html
scripts/: check_button_layout.ps1  check_design_parity.mjs  check_release_workflow.ps1
src/: main.rs  tauri_commands.rs  tauri_lifecycle.rs
src/backend/: admin.rs  autostart.rs  fps.rs  launcher.rs  logging.rs  mod.rs  monitor.rs  process.rs  schedule.rs  settings.rs  shutdown.rs  singleton.rs  system_info.rs  tray.rs  update.rs  window.rs
src/ui/: calendar.rs  control.rs  mod.rs  monitor_ui.rs  schedule_ui.rs  settings.rs  shutdown.rs  tray_ui.rs  updates.rs
tests/: tauri_migration_guard.rs
ui/: app.slint  buttons.slint  pickers.slint  theme.slint  widgets.slint
ui/tabs/: control.slint  monitor.slint  schedule.slint  settings.slint
web/: index.html
web/src/: main.jsx  styles.css
