[package]
name = "bdo-optimizer-launcher"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "1"
ureq = "2"
# M80: tray_ui worker thread를 blocking select!로 변경하기 위한 명시 의존성.
# tray-icon 0.19가 transitive로 가지고 있어 빌드 시간/바이너리 영향 0.
crossbeam-channel = "0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
    "Win32_System_Performance",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }
tray-icon = "0.19"
ferrisetw = "1.2"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
slint-build = "1"
winres = "0.1"
